--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,43 +1,49 @@
 <html>
-    <head>
-        <title>Show Page</title>
-    </head>
-    <body>
-        
 
-<center>
-    <h1 style='color:blue'>--* SHOW  PAGE *--</h1>
-    <hr>
- 
-    <a href='/user/logout'><span style='color:chocolate'>Logout</span></a> &nbsp; &nbsp;
-    <hr>
+<head>
+    <title>Show Page</title>
+</head>
 
-    <h2>User Table</h2>
+<body>
 
-    <table border='3px' cellpadding='6px' cellspacing=3px>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th colspan='2'><center>Action</center></th>
-        </tr>
 
-        <% result.forEach(function(rec)
+    <center>
+        <h1 style='color:blue'> SHOW PAGE </h1>
+        <hr>
+        <h4>Hello, <%= email%></h4>
+        <a href='/user/changepassword_req'>Change Password</a> &nbsp; &nbsp; &nbsp;
+        <a href='/user/logout'><span style='color:chocolate'>Logout</span></a> &nbsp; &nbsp;
+        <hr>
+
+        <h2>User Table</h2>
+
+        <table border='3px' cellpadding='6px' cellspacing=3px>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th colspan='2'>
+                    <center>Action</center>
+                </th>
+            </tr>
+
+            <% result.forEach(function(rec)
         {
             %>
-        <tr>
-            <td><%= rec.username %></td>
-            <td><%= rec.email %></td>
-            <td>
-                <a href="/user/delete?email=<%= rec.email %>">Delete</a>
-            </td>
-            <td>
-                <a href="/user/update_req?email=<%= rec.email%>&username=<%= rec.username%>">Update</a>
-            </td>
-        </tr>
-        <% }) %>
+            <tr>
+                <td><%= rec.username %></td>
+                <td><%= rec.email %></td>
+                <td>
+                    <a href="/user/remove?email=<%= rec.email %>">Remove</a>
+                </td>
+                <td>
+                    <a href="/user/update_req?email=<%= rec.email%>&username=<%= rec.username%>">Update</a>
+                </td>
+            </tr>
+            <% }) %>
 
-    </table>
-</center>
+        </table>
+    </center>
 
 </body>
+
 </html>
