--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -1,19 +1,22 @@
 <html>
-    <head>
-        <title>User Registration</title>
-    </head>
-    <body>
-        <center>
-            <h1>User Registration</h1>
 
-            <br>
-            <a href='/'>Home</a>
-            <hr><br><br>
+<head>
+    <title>User Registration</title>
+</head>
+
+<body>
+    <center>
+        <h1>User Registration</h1>
+
+        <br>
+        <a href='/'>Home</a>
+        <hr><br><br>
 
 
-            <table border='2px' cellspacing='3px' cellpadding='4px'>
-                <form action='/user/user_signup' method='POST'>
-                    <tr><th>Name : </th>
+        <table border='2px' cellspacing='3px' cellpadding='4px'>
+            <form action='/user/user_signup' method='POST'>
+                <tr>
+                    <th>Name : </th>
                     <td><input type='text' name='username'></td>
                 </tr>
 
@@ -28,18 +31,22 @@
                 </tr>
 
                 <tr>
-                    <td colspan='2'><center><input type='submit' value='Sign Up'></center></td>
+                    <td colspan='2'>
+                        <center><input type='submit' value='Sign Up'></center>
+                    </td>
                 </tr>
-                </form>
-            </table>
+            </form>
+        </table>
 
-            <br><hr><br><br>
+        <br>
+        <hr><br><br>
 
-            <p>If you already Registered 
-                <a href='/user/login_page'>Login</a>
-            </p>
-            <br>
+        <p>If you already Registered
+            <a href='/user/login_page'>Login</a>
+        </p>
+        <br>
 
-        </center>
-    </body>
+    </center>
+</body>
+
 </html>
